--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@mui/x-data-grid": "^6.12.0",
     "@stripe/stripe-js": "^2.1.5",
     "axios": "^1.4.0",
+    "firebase": "^11.0.2",
     "form-data": "^4.0.0",
     "js-cookie": "^3.0.5",
     "lodash.debounce": "^4.0.8",
